<resources>
    <string name="app_name">UF1Act11(ConstraintLayout)</string>
    <string name="correu_electronic">Correu electrònic</string>
    <string name="telefon">Telèfon</string>
    <string name="femeni">Femení</string>
    <string name="masculi">Masculí</string>
    <string name="genere">Gènere</string>
    <string name="enviar">Enviar</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="usuari">Usuari</string>
    <string name="edat">Edat</string>
    <string name="cognom">Cognom</string>
    <string name="nom">Nom</string>
</resources>